--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
 
   <title>Disclosure (Canada, 2026) | PrefabHomesCanada</title>
-  <meta name="description" content="Affiliate disclosure for PrefabHomesCanada. Learn how we use affiliate links, how we may earn commissions, and how we maintain editorial independence for Canadian buyers.">
+  <meta name="description" content="PrefabHomesCanada disclosure (Canada, 2026): how affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers." />
   <link rel="canonical" href="https://prefabhomescanada.github.io/disclosure/">
 
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
@@ -14,6 +14,13 @@
   <meta name="color-scheme" content="dark light">
   <meta name="theme-color" content="#0b1020">
   <meta name="author" content="PrefabHomesCanada Editorial">
+
+  <!-- Favicons (root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <link rel="stylesheet" href="/assets/css/styles.css">
 
@@ -32,7 +39,64 @@
   <meta name="twitter:title" content="Disclosure (Canada, 2026) | PrefabHomesCanada">
   <meta name="twitter:description" content="How affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers.">
   <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/disclosure-1200x630.webp">
-    
+
+  <!-- JSON-LD: Organization + WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/",
+    "logo":"https://prefabhomescanada.github.io/android-chrome-512x512.png"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "@id":"https://prefabhomescanada.github.io/#website",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+
+  <!-- JSON-LD: Article -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Article",
+    "@id":"https://prefabhomescanada.github.io/disclosure/#article",
+    "headline":"Disclosure (Canada, 2026) | PrefabHomesCanada",
+    "description":"PrefabHomesCanada disclosure (Canada, 2026): how affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers.",
+    "inLanguage":"en-CA",
+    "image":[
+      "https://prefabhomescanada.github.io/assets/images/og/disclosure-1200x630.webp"
+    ],
+    "datePublished":"2026-02-14",
+    "dateModified":"2026-02-15",
+    "isPartOf":{"@id":"https://prefabhomescanada.github.io/#website"},
+    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/disclosure/"},
+    "author":{"@type":"Organization","name":"PrefabHomesCanada Editorial"},
+    "publisher":{
+      "@type":"Organization",
+      "name":"PrefabHomesCanada",
+      "logo":{"@type":"ImageObject","url":"https://prefabhomescanada.github.io/android-chrome-512x512.png"}
+    }
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://prefabhomescanada.github.io/"},
+      {"@type":"ListItem","position":2,"name":"Disclosure","item":"https://prefabhomescanada.github.io/disclosure/"}
+    ]
+  }
+  </script>
+
   <!-- Google tag (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
   <script>
@@ -41,13 +105,12 @@
     gtag('js', new Date());
     gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
   </script>
-
 </head>
 
 <body>
 <a class="skip-link" href="#main">Skip to content</a>
 
-<header class="site-header">
+<header class="site-header" id="top">
   <div class="wrap header-inner">
     <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
       <img
@@ -77,100 +140,275 @@
   </div>
 </header>
 
-<main id="main" class="section">
-  <div class="wrap" style="max-width:860px">
+<main id="main">
+  <!-- HERO -->
+  <section class="hero">
+    <div class="wrap hero-grid">
+      <div class="hero-card">
+        <span class="kicker">Transparency</span>
+        <h1 class="hero-title">Disclosure</h1>
+        <p class="hero-sub">
+          PrefabHomesCanada may earn commissions from qualifying purchases through affiliate links. This page explains how that works,
+          what it does (and does not) affect, and how we keep recommendations practical for Canadian readers.
+        </p>
 
-    <h1>Affiliate Disclosure</h1>
-    <p class="small muted">Last updated: February 2026</p>
+        <div class="pillrow">
+          <span class="pill2">Affiliate links</span>
+          <span class="pill2">Amazon</span>
+          <span class="pill2">Independence</span>
+          <span class="pill2">Verification</span>
+        </div>
 
-    <div class="sep"></div>
+        <p class="disclaimer hero-disclaimer">
+          Last updated: <strong>February 2026</strong>.
+        </p>
+      </div>
 
-    <p>
-      PrefabHomesCanada participates in affiliate programs, including the Amazon Associates Program.
-      This means that some links on this website are affiliate links. If you click on one of these links
-      and make a purchase, we may earn a small commission at no additional cost to you.
-    </p>
+      <aside class="hero-media" aria-label="Page navigation">
+        <div class="media-inner">
+          <div class="noteBox toc tocBox">
+            <h2 class="tocTitle">On this page</h2>
+            <p class="small tocSub">Quick answers and details.</p>
+            <ul class="specs tocList">
+              <li><a href="#summary">Quick summary</a></li>
+              <li><a href="#affiliate">Affiliate links</a></li>
+              <li><a href="#amazon">Amazon Associates</a></li>
+              <li><a href="#editorial">Editorial independence</a></li>
+              <li><a href="#how-we-evaluate">How we evaluate listings</a></li>
+              <li><a href="#what-we-dont-do">What we don’t do</a></li>
+              <li><a href="#pricing">Pricing & availability</a></li>
+              <li><a href="#verification">Buyer verification checklist</a></li>
+              <li><a href="#no-advice">No professional advice</a></li>
+              <li><a href="#questions">Questions</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </section>
 
-    <h2>Amazon Associates Disclosure</h2>
-    <div class="noteBox">
+  <div class="wrap"><div class="hr-glow"></div></div>
+
+  <!-- SUMMARY -->
+  <section id="summary" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Quick summary</h2>
+
+      <div class="grid">
+        <div class="card grid-span-6">
+          <h3>Affiliate links may earn a commission</h3>
+          <p>If you click an affiliate link and purchase, we may earn a commission. You do not pay extra for using our links.</p>
+        </div>
+
+        <div class="card grid-span-6">
+          <h3>We don’t accept paid rankings</h3>
+          <p>We do not sell placement in our guides. Listings can be criticized or excluded if documentation or details are unclear.</p>
+        </div>
+
+        <div class="card grid-span-6">
+          <h3>We focus on Canada reality</h3>
+          <p>We emphasize installed cost planning, permits, frost/foundation, electrical/plumbing compliance, and climate suitability.</p>
+        </div>
+
+        <div class="card grid-span-6">
+          <h3>Always verify before purchase</h3>
+          <p>Online listings change. Always confirm documentation and local rules with your municipality and qualified trades.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- AFFILIATE -->
+  <section id="affiliate" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Affiliate links</h2>
       <p>
-        As an Amazon Associate, we earn from qualifying purchases.
+        PrefabHomesCanada participates in affiliate programs. Some links on this site are affiliate links.
+        If you click a link and make a purchase, we may earn a commission at no additional cost to you.
+      </p>
+
+      <div class="noteBox">
+        <p class="disclaimer">
+          Affiliate tracking typically works via a referral parameter in the URL and/or cookies set by the retailer or affiliate network.
+          The tracking window and attribution rules are determined by the retailer, not PrefabHomesCanada.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- AMAZON -->
+  <section id="amazon" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Amazon Associates</h2>
+
+      <div class="noteBox">
+        <p><strong>Amazon statement:</strong> As an Amazon Associate, we earn from qualifying purchases.</p>
+      </div>
+
+      <p>
+        Some pages may link to products or listings on Amazon Canada. Amazon may change pricing, availability, product details,
+        and listing pages at any time. The final and most accurate information is always shown on the retailer’s website.
       </p>
     </div>
+  </section>
 
-    <p>
-      Product prices, availability, specifications, and details can change at any time on Amazon.
-      We do our best to reflect accurate information, but the final details are always shown on the retailer’s website.
-    </p>
+  <!-- EDITORIAL -->
+  <section id="editorial" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Editorial independence</h2>
+      <p>
+        Affiliate relationships do not determine what we publish, how we rate items, or what we criticize.
+        Our goal is to help Canadian readers plan responsibly by highlighting both strengths and limitations.
+      </p>
 
-    <h2>How Affiliate Links Work</h2>
-    <p>
-      When you click an affiliate link on this site, a tracking parameter may be added to the URL.
-      If you purchase within the tracking window, we may receive a commission from the retailer.
-      The price you pay does not increase because of this.
-    </p>
+      <ul class="specs">
+        <li>We can recommend a listing and still point out risks or missing documentation.</li>
+        <li>We can exclude listings that lack critical details (for example, unclear certifications or incomplete specs).</li>
+        <li>We do not promise that any listing will be suitable for your municipality or property.</li>
+      </ul>
 
-    <h2>Editorial Independence</h2>
-    <p>
-      Our content is written for Canadian buyers researching expandable and modular prefab homes.
-      We focus on practical planning factors such as:
-    </p>
+      <div class="noteBox">
+        <p class="small noteBoxText">
+          If you want more detail on how we evaluate, see: <a href="/how-we-test/" style="text-decoration:underline;text-underline-offset:3px;">How we test</a> and
+          <a href="/methodology/" style="text-decoration:underline;text-underline-offset:3px;">Methodology</a>.
+        </p>
+      </div>
+    </div>
+  </section>
 
-    <ul class="specs">
-      <li>Building envelope performance (insulation, air sealing, windows)</li>
-      <li>Municipal zoning and permit considerations</li>
-      <li>Foundation and frost requirements</li>
-      <li>Electrical and plumbing compliance</li>
-      <li>Realistic installed cost planning</li>
-    </ul>
+  <!-- HOW WE EVALUATE -->
+  <section id="how-we-evaluate" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>How we evaluate listings</h2>
+      <p>
+        Prefab homes sold online are often closer to a “structure + interior shell” than a turnkey Canadian home. We prioritize practical planning:
+      </p>
 
-    <p>
-      Affiliate relationships do not influence our evaluation of structural limitations,
-      missing documentation, or potential project risks. If a listing lacks clarity or critical
-      information, we state that directly.
-    </p>
+      <div class="grid">
+        <div class="card grid-span-6">
+          <h3>Documentation</h3>
+          <ul class="specs">
+            <li>Spec clarity (dimensions, materials, assembly method)</li>
+            <li>Electrical approvals (CSA/UL/ETL where applicable)</li>
+            <li>Drawings or manuals where available</li>
+          </ul>
+        </div>
 
-    <h2>No Professional Advice</h2>
-    <p>
-      The information on PrefabHomesCanada is for educational and informational purposes only.
-      It does not constitute legal, engineering, architectural, or financial advice.
-      Always consult qualified local professionals before purchasing or installing a prefab home.
-    </p>
+        <div class="card grid-span-6">
+          <h3>Canada install reality</h3>
+          <ul class="specs">
+            <li>Foundation and frost depth planning</li>
+            <li>Insulation and air sealing expectations</li>
+            <li>Delivery access and staging area requirements</li>
+          </ul>
+        </div>
 
-    <h2>Verification Responsibility</h2>
-    <p>
-      Before purchasing any prefab home or related product, you should:
-    </p>
+        <div class="card grid-span-6">
+          <h3>Costs beyond the listing</h3>
+          <ul class="specs">
+            <li>Permits, engineering (if needed), inspections</li>
+            <li>Electrical, plumbing, HVAC, winterization</li>
+            <li>Site prep, crane/forklift (if needed), finishing</li>
+          </ul>
+        </div>
 
-    <ul class="specs">
-      <li>Confirm zoning and occupancy rules with your municipality</li>
-      <li>Request documentation from the seller (drawings, certifications, specs)</li>
-      <li>Verify electrical approvals (CSA/UL/ETL where applicable)</li>
-      <li>Confirm insulation levels and climate suitability</li>
-      <li>Understand delivery, foundation, and installation requirements</li>
-    </ul>
+        <div class="card grid-span-6">
+          <h3>Red flags</h3>
+          <ul class="specs">
+            <li>Unclear certifications or missing specs</li>
+            <li>“Too good to be true” promises without documentation</li>
+            <li>Photos that don’t match stated dimensions or contents</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <h2>Questions</h2>
-    <p>
-      PrefabHomesCanada may not provide direct individual support.
-      This disclosure is published to explain how affiliate links work and how we keep recommendations independent.
-    </p>
+  <!-- WHAT WE DON'T DO -->
+  <section id="what-we-dont-do" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>What we don’t do</h2>
+      <ul class="specs">
+        <li><strong>No paid placements:</strong> we don’t sell rankings or “top spot” positions.</li>
+        <li><strong>No guarantees:</strong> we can’t guarantee permits, approvals, or performance on your property.</li>
+        <li><strong>No individual support:</strong> PrefabHomesCanada may not provide direct 1:1 consulting or project management.</li>
+        <li><strong>No professional services:</strong> we are not your engineer, architect, electrician, or lawyer.</li>
+      </ul>
+    </div>
+  </section>
 
-    <div class="sep"></div>
+  <!-- PRICING -->
+  <section id="pricing" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Pricing & availability</h2>
+      <p>
+        Prices, availability, shipping terms, and included components can change without notice. When possible, we note what appears included,
+        but you should always confirm the final details on the seller/retailer page before purchase.
+      </p>
+    </div>
+  </section>
 
-    <p class="small muted">
-      Transparency matters. Our goal is to provide realistic, Canada-focused guidance so buyers can plan responsibly.
-    </p>
+  <!-- VERIFICATION -->
+  <section id="verification" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Buyer verification checklist</h2>
+      <p>Before purchasing any prefab home or related product, you should:</p>
 
-  </div>
+      <ul class="specs">
+        <li>Confirm zoning, setbacks, and occupancy rules with your municipality</li>
+        <li>Request documentation from the seller (drawings, certifications, specs)</li>
+        <li>Verify electrical approvals (CSA/UL/ETL where applicable)</li>
+        <li>Confirm insulation levels and climate suitability for your region</li>
+        <li>Understand delivery access, foundation, and installation requirements</li>
+        <li>Budget for utilities, winterization, permits, and inspections</li>
+      </ul>
+
+      <div class="noteBox">
+        <p class="small noteBoxText">
+          For a deeper breakdown, see: <a href="/cost-of-prefab-home-canada/" style="text-decoration:underline;text-underline-offset:3px;">Real installed costs in Canada</a>.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- NO ADVICE -->
+  <section id="no-advice" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>No professional advice</h2>
+      <p>
+        The information on PrefabHomesCanada is for educational and informational purposes only. It does not constitute legal, engineering,
+        architectural, or financial advice. Always consult qualified local professionals before purchasing or installing a prefab home.
+      </p>
+    </div>
+  </section>
+
+  <!-- QUESTIONS -->
+  <section id="questions" class="section anchor">
+    <div class="wrap" style="max-width:860px">
+      <h2>Questions</h2>
+      <p>
+        PrefabHomesCanada may not provide direct individual support. This page is published to explain affiliate relationships and how we keep content independent.
+      </p>
+
+      <div class="sep"></div>
+
+      <p class="small muted">
+        Transparency matters. Our goal is to provide realistic, Canada-focused guidance so buyers can plan responsibly.
+      </p>
+    </div>
+  </section>
+
+  <div class="wrap"><div class="sep"></div></div>
 </main>
 
 <footer class="site-footer" role="contentinfo">
   <div class="wrap footerBottom">
     <div class="footerLegal small">
       <span>© <span id="y"></span> PrefabHomesCanada</span>
-      <span class="footerDot">•</span>
+      <span class="footerDot" aria-hidden="true">•</span>
       <a href="/privacy-policy/">Privacy policy</a>
+      <span class="footerDot" aria-hidden="true">•</span>
+      <a href="/disclosure/" class="is-active">Disclosure</a>
     </div>
   </div>
 </footer>
