--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
     "@type":"WebSite",
     "@id":"https://prefabhomescanada.github.io/#website",
     "name":"PrefabHomesCanada",
-    "url":"https://prefabhomescanada.github.io/"
+    "url":"https://prefabhomescanada.github.io/",
+    "inLanguage":"en-CA",
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://prefabhomescanada.github.io/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
   }
   </script>
 
@@ -86,6 +92,15 @@
     ]
   }
   </script>
+
+  <!-- Google tag (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5TC3NKCHW5', { send_page_view: true });
+  </script>
 </head>
 
 <body>
@@ -110,7 +125,7 @@
       </button>
 
       <nav class="nav" id="nav" aria-label="Primary">
-        <a href="/best-prefab-homes-canada/" class="is-active">Guides</a>
+        <a href="/best-prefab-homes-canada/" class="is-active">Best prefab homes</a>
         <a href="/how-we-test/">How we test</a>
         <a href="/methodology/">Methodology</a>
         <a href="/about/">About</a>
@@ -164,7 +179,7 @@
                   /assets/images/hero/modern-prefab-home-canada-winter-1600x900.webp 1600w,
                   /assets/images/hero/modern-prefab-home-canada-winter-2400x1350.webp 2400w
                 "
-                sizes="100vw"
+                sizes="(min-width: 980px) 420px, 100vw"
                 alt="Modern prefab home in a Canadian forest during winter at sunset with warm interior lights"
                 width="2400"
                 height="1350"
@@ -222,7 +237,7 @@
       </div>
     </section>
 
-    <!-- SEO CONTEXT BLOCK (for indexing readiness) -->
+    <!-- SEO CONTEXT BLOCK -->
     <section class="section">
       <div class="wrap">
         <h2>Prefab Homes in Canada (What Buyers Actually Need to Know)</h2>
@@ -295,7 +310,7 @@
         <div class="section-head">
           <div>
             <h2>How we test (quick preview)</h2>
-            <p>We’re not pretending to be a construction authority. We’re optimizing for buyer protection and planning clarity.</p>
+            <p>We’re optimizing for buyer protection and planning clarity, not pretending to be your engineer.</p>
           </div>
         </div>
 
@@ -356,55 +371,55 @@
   </main>
 
   <footer class="site-footer" role="contentinfo">
-  <div class="wrap footer-grid">
-    <div class="footerBrand">
-      <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
-        <div class="footerBrandRow">
-          <img
-            class="footerIcon"
-            src="/assets/images/branding/phc-icon-1024.png"
-            width="28" height="28"
-            alt="PrefabHomesCanada icon"
-            loading="lazy" decoding="async">
-          <strong class="footerName">PrefabHomesCanada</strong>
-        </div>
-      </a>
+    <div class="wrap footer-grid">
+      <div class="footerBrand">
+        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+          <div class="footerBrandRow">
+            <img
+              class="footerIcon"
+              src="/assets/images/branding/phc-icon-1024.png"
+              width="28" height="28"
+              alt="PrefabHomesCanada icon"
+              loading="lazy" decoding="async">
+            <strong class="footerName">PrefabHomesCanada</strong>
+          </div>
+        </a>
 
-      <p class="small footerBlurb">
-        A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
-      </p>
+        <p class="small footerBlurb">
+          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+        </p>
+      </div>
+
+      <nav class="footerNav" aria-label="Footer">
+        <p class="footerTitle small">Site</p>
+
+        <ul class="footerLinksGrid">
+          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
+
+          <li><a href="/how-we-test/">How we test</a></li>
+          <li><a href="/methodology/">Methodology</a></li>
+
+          <li><a href="/about/">About</a></li>
+          <li><a href="/disclosure/">Disclosure</a></li>
+
+          <li><a href="/privacy-policy/">Privacy policy</a></li>
+        </ul>
+      </nav>
     </div>
 
-    <nav class="footerNav" aria-label="Footer">
-      <p class="footerTitle small">Site</p>
+    <div class="wrap footerBottom">
+      <div class="footerLegal small">
+        <span>© <span id="y"></span> PrefabHomesCanada</span>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      </div>
 
-      <ul class="footerLinksGrid">
-        <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
-        <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
-
-        <li><a href="/how-we-test/">How we test</a></li>
-        <li><a href="/methodology/">Methodology</a></li>
-
-        <li><a href="/about/">About</a></li>
-        <li><a href="/disclosure/">Disclosure</a></li>
-
-        <li><a href="/privacy-policy/">Privacy policy</a></li>
-      </ul>
-    </nav>
-  </div>
-
-  <div class="wrap footerBottom">
-    <div class="footerLegal small">
-      <span>© <span id="y"></span> PrefabHomesCanada</span>
-      <span class="footerDot" aria-hidden="true">•</span>
-      <a href="/privacy-policy/">Privacy policy</a>
-      <span class="footerDot" aria-hidden="true">•</span>
-      <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
     </div>
-
-    <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
-  </div>
-</footer>
+  </footer>
 
   <script src="/assets/js/site.js" defer></script>
 </body>
