--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="section-head">
           <div>
             <h2>Latest guide</h2>
-            <p>Start here if you’re researching Amazon expandable prefab homes and want a realistic Canada-focused view.</p>
+            <p><strong>Start here:</strong> Most “move-in ready” prefab listings aren’t. This guide breaks down what’s actually included, what’s missing, and the real installed cost in Canada.</p>
           </div>
         </div>
 
