--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
 
   <title>Disclosure (Canada, 2026) | PrefabHomesCanada</title>
-  <meta name="description" content="PrefabHomesCanada disclosure (Canada, 2026): how affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers." />
+  <meta name="description" content="PrefabHomesCanada disclosure (Canada, 2026): how affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers.">
   <link rel="canonical" href="https://prefabhomescanada.github.io/disclosure/">
 
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
@@ -107,13 +107,14 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 <a class="skip-link" href="#main">Skip to content</a>
 
-<header class="site-header" id="top">
+<header class="site-header">
   <div class="wrap header-inner">
     <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
       <img
+        class="brand-logo"
         src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
         alt="PrefabHomesCanada"
         width="1000"
@@ -130,8 +131,10 @@
     <nav class="nav" id="nav" aria-label="Primary">
       <a href="/best-prefab-homes-canada/">Top 7</a>
       <a href="/cost-of-prefab-home-canada/">Real Costs</a>
-      <a href="/modular-homes-canada/">Modular</a>
-      <a href="/tiny-homes-canada/">Tiny</a>
+      <a href="/how-we-test/">How we test</a>
+      <a href="/methodology/">Methodology</a>
+      <a href="/about/">About</a>
+      <a class="is-active" aria-current="page" href="/disclosure/">Disclosure</a>
     </nav>
 
     <div class="header-cta">
@@ -166,22 +169,36 @@
 
       <aside class="hero-media" aria-label="Page navigation">
         <div class="media-inner">
-          <div class="noteBox toc tocBox">
+
+          <!-- UPGRADED TOC (same structure, nicer content) -->
+          <div class="noteBox toc tocBox" role="navigation" aria-label="On this page">
             <h2 class="tocTitle">On this page</h2>
-            <p class="small tocSub">Quick answers and details.</p>
+            <p class="small tocSub">Jump links (quick + detailed).</p>
+
+            <div class="note" style="margin:10px 0 12px;">
+              <strong>Quick note:</strong> We don’t sell rankings. Affiliate links never decide what we include.
+            </div>
+
             <ul class="specs tocList">
-              <li><a href="#summary">Quick summary</a></li>
-              <li><a href="#affiliate">Affiliate links</a></li>
-              <li><a href="#amazon">Amazon Associates</a></li>
-              <li><a href="#editorial">Editorial independence</a></li>
-              <li><a href="#how-we-evaluate">How we evaluate listings</a></li>
-              <li><a href="#what-we-dont-do">What we don’t do</a></li>
-              <li><a href="#pricing">Pricing & availability</a></li>
-              <li><a href="#verification">Buyer verification checklist</a></li>
-              <li><a href="#no-advice">No professional advice</a></li>
-              <li><a href="#questions">Questions</a></li>
+              <li><a href="#summary">Quick summary <span class="small muted">• 30 sec</span></a></li>
+              <li><a href="#affiliate">Affiliate links <span class="small muted">• how it works</span></a></li>
+              <li><a href="#amazon">Amazon Associates <span class="small muted">• required statement</span></a></li>
+              <li><a href="#editorial">Editorial independence <span class="small muted">• our rules</span></a></li>
+              <li><a href="#how-we-evaluate">How we evaluate listings <span class="small muted">• what we check</span></a></li>
+              <li><a href="#what-we-dont-do">What we don’t do <span class="small muted">• limits</span></a></li>
+              <li><a href="#pricing">Pricing & availability <span class="small muted">• changes happen</span></a></li>
+              <li><a href="#verification">Buyer checklist <span class="small muted">• verify before buying</span></a></li>
+              <li><a href="#no-advice">No professional advice <span class="small muted">• disclaimer</span></a></li>
+              <li><a href="#questions">Questions <span class="small muted">• contact note</span></a></li>
             </ul>
+
+            <div class="sep" style="margin:14px 0;"></div>
+
+            <p class="small muted" style="margin:0;">
+              Tip: If a seller won’t provide written specs (insulation, windows, approvals), treat it as a risk.
+            </p>
           </div>
+
         </div>
       </aside>
     </div>
@@ -395,6 +412,10 @@
       <p class="small muted">
         Transparency matters. Our goal is to provide realistic, Canada-focused guidance so buyers can plan responsibly.
       </p>
+
+      <div class="cta-row" style="margin-top:14px;">
+        <a class="btn btn-ghost" href="#top" aria-label="Back to top">Back to top ↑</a>
+      </div>
     </div>
   </section>
 
@@ -402,14 +423,49 @@
 </main>
 
 <footer class="site-footer" role="contentinfo">
+  <div class="wrap footer-grid">
+    <div class="footerBrand">
+      <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+        <div class="footerBrandRow">
+          <img
+            class="footerIcon"
+            src="/assets/images/branding/phc-icon-1024.png"
+            width="28" height="28"
+            alt="PrefabHomesCanada icon"
+            loading="lazy" decoding="async">
+          <strong class="footerName">PrefabHomesCanada</strong>
+        </div>
+      </a>
+
+      <p class="small footerBlurb">
+        A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+      </p>
+    </div>
+
+    <nav class="footerNav" aria-label="Footer">
+      <p class="footerTitle small">Site</p>
+      <ul class="footerLinksGrid">
+        <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+        <li><a href="/cost-of-prefab-home-canada/">Cost of prefab homes</a></li>
+        <li><a href="/how-we-test/">How we test</a></li>
+        <li><a href="/methodology/">Methodology</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/disclosure/" class="is-active" aria-current="page">Disclosure</a></li>
+        <li><a href="/privacy-policy/">Privacy policy</a></li>
+      </ul>
+    </nav>
+  </div>
+
   <div class="wrap footerBottom">
     <div class="footerLegal small">
       <span>© <span id="y"></span> PrefabHomesCanada</span>
       <span class="footerDot" aria-hidden="true">•</span>
       <a href="/privacy-policy/">Privacy policy</a>
       <span class="footerDot" aria-hidden="true">•</span>
-      <a href="/disclosure/" class="is-active">Disclosure</a>
+      <a href="/disclosure/" class="is-active" aria-current="page">Disclosure</a>
     </div>
+
+    <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
   </div>
 </footer>
 
