--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -198,12 +198,7 @@
                 <li><a href="#affiliate">Affiliate links · <span class="muted">how it works</span></a></li>
                 <li><a href="#amazon">Amazon Associates · <span class="muted">required statement</span></a></li>
                 <li><a href="#editorial">Editorial independence · <span class="muted">our rules</span></a></li>
-                <li><a href="#how-we-evaluate">How we evaluate listings · <span class="muted">what we check</span></a></li>
-                <li><a href="#what-we-dont-do">What we don’t do · <span class="muted">boundaries</span></a></li>
-                <li><a href="#pricing">Pricing & availability · <span class="muted">changes happen</span></a></li>
-                <li><a href="#verification">Buyer verification checklist · <span class="muted">before you buy</span></a></li>
-                <li><a href="#no-advice">No professional advice · <span class="muted">important</span></a></li>
-                <li><a href="#questions">Questions · <span class="muted">contact</span></a></li>
+                <li><a href="#verification">Buyer checklist · <span class="muted">before you buy</span></a></li>
               </ul>
             </nav>
 
