--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -137,7 +137,6 @@
         Menu
       </button>
 
-      <!-- Match the main site nav style (like your Top 7 page / homepage vibe) -->
       <nav class="nav" id="nav" aria-label="Primary">
         <a href="/best-prefab-homes-canada/">Top 7</a>
         <a href="/cost-of-prefab-home-canada/">Real Costs</a>
@@ -179,20 +178,18 @@
           </p>
         </div>
 
-        <!-- ✅ UPDATED: “On this page” styled like your Top 7 page -->
+        <!-- ✅ UPDATED: “On this page” now matches Top 7 vibe AND is shorter -->
         <aside class="hero-media" aria-label="Page navigation">
           <div class="media-inner">
-
             <nav class="tocBox toc" aria-label="On this page">
               <p class="tocTitle" style="margin:0 0 6px; font-weight:900;">On this page</p>
               <p class="small tocSub">Jump links (quick + detailed).</p>
 
-              <!-- Optional: quick note like your screenshot -->
               <div class="note" style="margin:10px 0 12px;">
                 <strong>Quick note:</strong> We don’t sell rankings. Affiliate links never decide what we include.
               </div>
 
-              <!-- IMPORTANT: no .specs here (same as your Top 7 TOC) -->
+              <!-- Short TOC (5 items) -->
               <ul class="tocList">
                 <li><a href="#summary">Quick summary · <span class="muted">30 sec</span></a></li>
                 <li><a href="#affiliate">Affiliate links · <span class="muted">how it works</span></a></li>
@@ -200,8 +197,22 @@
                 <li><a href="#editorial">Editorial independence · <span class="muted">our rules</span></a></li>
                 <li><a href="#verification">Buyer checklist · <span class="muted">before you buy</span></a></li>
               </ul>
-            </nav>
 
+              <!-- Optional: expandable “More sections” (no JS, clean) -->
+              <details class="tocMore" style="margin-top:10px;">
+                <summary class="small" style="cursor:pointer; opacity:.92;">
+                  More sections
+                </summary>
+
+                <ul class="tocList" style="margin-top:10px;">
+                  <li><a href="#how-we-evaluate">How we evaluate · <span class="muted">what we check</span></a></li>
+                  <li><a href="#what-we-dont-do">What we don’t do · <span class="muted">boundaries</span></a></li>
+                  <li><a href="#pricing">Pricing & availability · <span class="muted">changes happen</span></a></li>
+                  <li><a href="#no-advice">No professional advice · <span class="muted">important</span></a></li>
+                  <li><a href="#questions">Questions · <span class="muted">contact</span></a></li>
+                </ul>
+              </details>
+            </nav>
           </div>
         </aside>
       </div>
@@ -423,7 +434,6 @@
     <div class="wrap"><div class="sep"></div></div>
   </main>
 
-  <!-- Footer: match the nicer site footer (like homepage) -->
   <footer class="site-footer" role="contentinfo">
     <div class="wrap footer-grid">
       <div class="footerBrand">
