--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -189,6 +189,9 @@
             Most “prefab home price” conversations start and end with the listing price. In Canada, that’s rarely the real budget.
             This page explains the installed-cost drivers: delivery and offload, foundations, permits, utilities, plumbing/electrical,
             insulation upgrades, and winterization. Use it to plan realistically and avoid expensive surprises.
+            <strong>Also browsing models?</strong> Start with our
+            <a href="/best-prefab-homes-canada/">Top 7 prefab homes on Amazon Canada</a>,
+            then use this cost guide to sanity-check your real installed budget.
           </p>
 
           <div class="pillrow" aria-label="Key points">
@@ -206,6 +209,7 @@
           <p class="disclaimer hero-disclaimer">
             Important: costs vary widely by province/municipality, site conditions, and what your seller actually includes.
             Always confirm documentation (drawings/specs, electrical approvals, insulation details, and any snow-load/wind-load claims).
+            For how we evaluate recommendations, see <a href="/how-we-test/">How we test</a> and <a href="/methodology/">Methodology</a>.
           </p>
         </div>
 
@@ -242,6 +246,9 @@
                 <li><a href="#scenarios">Example scenarios (small / mid / larger)</a></li>
                 <li><a href="#checklist">Buyer checklist (before you buy)</a></li>
                 <li><a href="#faq">FAQ</a></li>
+                <li><a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a></li>
+                <li><a href="/how-we-test/">How we test</a></li>
+                <li><a href="/methodology/">Methodology</a></li>
                 <li><a href="/disclosure/">Affiliate disclosure</a></li>
               </ul>
             </nav>
@@ -268,6 +275,19 @@
             <li><strong>Plan for climate:</strong> water, drainage, freeze protection, snow and wind realities by region.</li>
             <li><strong>Don’t force a fake total:</strong> get quotes for your site conditions instead of guessing.</li>
           </ul>
+
+          <!-- RELATED (cluster reinforcement) -->
+          <div class="noteBox" style="margin-top:14px;">
+            <h3 class="h3">Related guides (recommended next)</h3>
+            <ul class="specs">
+              <li><a href="/best-prefab-homes-canada/">Best prefab homes on Amazon Canada (Top 7)</a> (start here if you’re still shopping)</li>
+              <li><a href="/how-we-test/">How we test</a> (what we check before recommending)</li>
+              <li><a href="/methodology/">Methodology</a> (our evaluation framework)</li>
+              <li><a href="/disclosure/">Disclosure</a> (affiliate link transparency)</li>
+            </ul>
+          </div>
+          <!-- /RELATED -->
+
         </div>
       </div>
     </section>
@@ -279,6 +299,8 @@
         <p class="sub">
           Online listings often describe a unit, shell, or partially finished module. In Canada, the installed price depends on
           <strong>where</strong> you place it, <strong>what approvals</strong> apply, and <strong>what utilities</strong> you can connect to.
+          If you’re comparing units right now, cross-check your shortlist against our
+          <a href="/best-prefab-homes-canada/">Top 7 buyer-focused picks</a>.
         </p>
 
         <div class="grid">
@@ -344,6 +366,10 @@
             <li><strong>How will it be serviced?</strong> grid power vs. off-grid, well vs. municipal water, septic vs. sewer.</li>
             <li><strong>What is the unit spec?</strong> insulation details, windows/doors, air/vapor layers, electrical system approvals.</li>
           </ul>
+          <p class="small muted">
+            If you’re still deciding what to buy, start with <a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a>,
+            then come back here to price the real install.
+          </p>
         </div>
 
         <div class="grid">
@@ -539,6 +565,7 @@
         <h2>Buyer checklist (before you buy)</h2>
         <p class="sub">
           Use this checklist to prevent the classic trap: paying for a listing before you know if it can be installed and approved where you live.
+          If you’re still deciding which unit to buy, start with <a href="/best-prefab-homes-canada/">Best prefab homes (Top 7)</a>.
         </p>
 
         <div class="grid">
@@ -586,6 +613,9 @@
           <p class="sub">
             Don’t pay before you have a clear answer on <strong>permits + foundation plan + electrical inspection pathway</strong>.
             If any of those are unknown, the installed cost remains unknown.
+          </p>
+          <p class="small">
+            Next: <a href="/how-we-test/">How we test</a> and <a href="/methodology/">Methodology</a> explain what we verify before recommending products.
           </p>
         </div>
 
@@ -641,6 +671,7 @@
           </p>
           <p class="small">
             <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the Top 7</a>
+            <a class="btn btn-ghost" href="/how-we-test/">How we test</a>
           </p>
         </div>
 
